# App_Controle_de_Gastos

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app_controle_gastos/: calculadora_distribuicao.py  constants.py  main.py  public_config.ini
app_controle_gastos/backend/DB/: connection.py  schemas.py
app_controle_gastos/frontend/: central_windows.py  tela_inicial.py
app_controle_gastos/frontend/layouts/: tela_inicial.ui
app_controle_gastos/pages/: 01_calculadora_distribuicao.py
app_controle_gastos/tokens/: database.py
app_controle_gastos/utils/: constants.py
docs/features/: calculadora_distribuicao.md
