[tool.poetry]
name = "App_Controle_Gastos"
version = "0.1.0"
description = ""
authors = ["Lyarkh <lcemanuel.emanuel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PySide6 = "^6.3.1"
PyQt5 = "^5.15.7"
SQLAlchemy = "^1.4.40"
mysql-connector-python = "^8.0.30"
mysqlclient = "^2.1.1"
streamlit = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
