[tool.poetry]
name = "App_Controle_Gastos"
version = "0.1.0"
description = ""
authors = ["Lyarkh <lcemanuel.emanuel@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12.*"
streamlit = "^1.18.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"
taskipy = "^1.12.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
lint_force = "blue  . && isort  ."
run = "streamlit run app_controle_gastos/calculadora_distribuicao.py"